# claude-usage-monitor

./: .gitignore  CMakeLists.txt  DLL_DEPENDENCIES.md  README.md  WORKLOG.md
src/: ClaudeApiClient.cpp  ClaudeApiClient.h  OverlayWindow.cpp  OverlayWindow.h  SecureStorage.cpp  SecureStorage.h  SettingsDialog.cpp  SettingsDialog.h  SystemTrayIcon.cpp  SystemTrayIcon.h  UsageData.h  main.cpp
src/resources/: app.rc  resources.qrc
